Update the style of popover window for download links history. Add a "x" button to close the popover window. Fix the popover jumping issue when spinner is running. - In cart.js (line 154-156), add a "x" button in the popover window. This   is used as a close button for popover window. - In cart.js (line 173-177), add the event handler to manually close popover   window when user clicks "x" button. - In cart.js (line 337-351), add enablePSinDownloadLinksWindow function.   This is used to enable and update PS when the popover window has reach   to its max height. - In cart.js (line 314-322), update downloadZip to provide a max height   to popover window and enable ps when necessary. - In cart.js (line 290-291), update popover's position when spinner is running.   This will fix the popover jumping issue when displaying the spinner. - In opus.css (line 970-983), add the styling for download links popover   window, including the styling for "x" button and ps in the window. - In footer.html(line 7-8), remove title attribute in button tag, we will   set the popover title when initializing it. - In base.html (line 476), rename "zippedFiles" to "op-zipped-files".

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -948,7 +948,7 @@ panel */
     display: none !important;
 }
 
-#cart-sidebar .zippedFiles li {
+#cart-sidebar .op-zipped-files li {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -965,6 +965,20 @@ panel */
 
 #op-download-links {
     display: none;
+}
+
+/* Make the "x" button in download links popover stays at the right. */
+.close-download-links-history {
+    float: right;
+}
+
+.op-zipped-files {
+    padding-left: 2em;
+}
+
+/* Requirement for ps in popover window */
+.popover-body {
+    position: relative;
 }
 
 div.gallery {
